# fast-accessibility

./: .clang-format  .gitignore  CMakeLists.txt  README.md  activate.bat  activate.sh  build_stubs.py  conan_deployer.py  conanfile.txt  plot_benchmark.py  pyproject.toml  to_geopackage.py
cmake/: pyaccess-config.cmake.in
examples/: 2sfca.ipynb  public_transit.ipynb
include/pyaccess/: main.h
pyaccess/: __init__.py  _pyaccess_ext.pyi  accessibility.py  builder.py  data_util.py  decay.py  explorer.py  graph.py  graph_util.py  method_util.py  osm_parser.py  util.py
pyaccess/accessibility/: __init__.py  algorithms.py  floating_catchment.py  matrix.py  reachability.py
pyaccess/components/: __init__.py  base.py  ch.py  partition.py  tiled.py  transit.py  weight.py
pyaccess/optimization/: __init__.py  maximum_coverage.py  p_median.py  set_coverage.py
pyaccess/parser/: cycling_decoder.py  driving_decoder.py  fast_parser.py  gtfs_parser.py  osm_parser.py  util.py  walking_decoder.py
pyaccess/test/: test_accessibility.py  test_graph.py  test_id_mapping.py  test_transit.py
src/: benchmark.h  benchmark2.h  benchmark_util.h  bind.cpp  main.cpp  util.h
src/accessibility/: 2sfca.h  aggregation.h  batched_shortest_path.h  dijkstra_e2sfca.h  matrix_query.h  other_e2sfca.h  others.h  phast_e2sfca.h  range_query.h  reachability.h  tiled_e2sfca.h
src/accessibility/distance_decay/: binary_decay.h  decay.h  exponential_decay.h  gaussian_decay.h  gravity_decay.h  hybrid_decay.h  inverse_power_decay.h  kernel_density_decay.h  linear_decay.h  piecewise_linear_decay.h  polynom_decay.h
src/algorithm/: all_dijkstra.h  bidirect_bfs.h  connected_components.h  grasp.h  one_to_many.h  phast.h  phast2.h  phast3.h  pq_item.h  range_dijkstra.h  range_gs_phast.h  range_gs_rphast.h  range_phast.h  range_rphast.h  restricted_dijkstra.h  rphast.h  rphast_preprocess.h  special_dijkstra.h  transit_dijkstra.h  util.h
src/benchmark/: 2sfca_run.h  benchmark.h  benchmark_util.h  catchment_range.h  demand_count.h  one_to_many.h  range_search.h  study_area.h  supply_count.h
src/binding/: bind_accessibility.h  bind_decay.h  bind_graph.h  bind_solver.h  bind_utilities.h
src/graph/: base_graph.cpp  base_graph.h  ch_graph.cpp  ch_graph.h  ch_graph_2.cpp  ch_storage.h  enums.h  graph.h  graph_storage.h  loader.cpp  loader.h  structs.h  tiled_graph.cpp  tiled_graph.h  tiled_storage.h  topology_storage.cpp  topology_storage.h  transit_graph.cpp  transit_graph.h
src/graph/base/: graph_base.h  graph_index.cpp  graph_index.h  id_mapping.h
src/graph/comps/: ch_data.h  ch_index.cpp  ch_index.h  graph_base.cpp  graph_base.h  graph_index.cpp  graph_index.h  id_mapping.h  partition.h  tiled_data.h  weighting.h
src/graph/explorer/: base_explorer.cpp  base_explorer.h  ch_explorer.cpp  ch_explorer.h  tiled_explorer.cpp  tiled_explorer.h
src/graph/io/: adjacency_io.cpp  adjaceny_io.h  cell_index_io.cpp  cell_index_io.h  ch_data_io.cpp  ch_data_io.h  graph_base_io.cpp  graph_base_io.h  id_mapping_io.cpp  id_mapping_io.h  loader.cpp  loader.h  partition_io.cpp  partition_io.h  shortcut_io.h  tiled_data_io.cpp  tiled_data_io.h  transit_data_io.cpp  transit_data_io.h  util.h  weighting_io.cpp  weighting_io.h
src/graph/mod/: adjacency_mod.cpp  adjacency_mod.h  cell_index_mod.h  ch_data_mod.h  ch_index_mod.h  ch_mod.cpp  ch_mod.h  graph_base_mod.cpp  graph_base_mod.h  id_mapping_mod.cpp  id_mapping_mod.h  overlay_mod.cpp  overlay_mod.h  partition_mod.cpp  partition_mod.h  tiled_data_mod.h  weighting_mod.cpp  weighting_mod.h
src/graph/preproc/: build_ch_index.cpp  build_ch_index.h  node_ordering.cpp  node_ordering.h  remove_unconnected.h
src/graph/preproc/ch/: ch.h  contraction_order.h  local_search.h  preproc_graph.h
src/graph/preproc/partition/: edmonds_karp.h  inertial_flow.h  interial_flow.h  partition.h
src/graph/preproc/tiled/: tiled.h  util.h
src/graph/preproc/transit/: transit.h
src/graph/speed_ups/: cell_index.h  ch_data.h  ch_index.h  partition.h  tiled_data.h  transit_data.h
src/graph/structs/: adjacency.cpp  adjacency.h  enums.h  geom.h  id_mapping.h  node_mapping.h  structs.h  table.h
src/graph/util/: map_coords.h
src/graph/weights/: tc_weighting.cpp  tc_weighting.h  transit_weighting.cpp  transit_weighting.h  weighting.cpp  weighting.h
src/kd_tree/: kd_tree.cpp  kd_tree.h
src/routing/one_to_many/: README.md  dijkstra.h  grasp.h  phast.h  rphast.h
src/solver/one_to_many/: README.md  dijkstra.h  grasp.h  phast.h  rphast.h  state.h  transit.h
src/solver/one_to_many/algorithm/: grasp.h  many_dijkstra.h  phast.h  range_dijkstra.h  range_gs_phast.h  range_gs_rphast.h  range_phast.h  range_rphast.h  rphast.h  rphast_preprocess.h  transit_dijkstra.h
src/util/: flags.h  function_ref.h  io.h  matrix.h  pq_item.h  snap.h
src/util/kd_tree/: kd_tree.cpp
src/util/osm/: cycling_profile.h  driving_profile.h  graph_parser.cpp  graph_parser.h  internal.h  parser.cpp  parser.h  profile.h  walking_profile.h
src/util/osm/proto/: fileformat.pb.cc  fileformat.pb.h  osmformat.pb.cc  osmformat.pb.h
